homepage overflow-x fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,11 +85,11 @@ h1 {
   font-family: 'Rajdhani', sans-serif;
 }
 #heading {
-position:relative;
-top:10%;
-left:37%;
+margin-left:32%;
+margin-top:5%;
+margin-bottom:-5%;
 font-family: 'Rajdhani', sans-serif;
-font-size:100px;
+font-size:10em;
 
 }
 
